fixed the footer responsive width/the white space

--- a/finalwebpagenew.css
+++ b/finalwebpagenew.css
@@ -3,6 +3,8 @@
   src: url("Fonts/neon_80s/Neon.ttf");
 }
 
+
+
 body {
   background: #fff;
   color: #000;
@@ -19,10 +21,10 @@ body {
 
 .title{
   font-family: 'neon', sans-serif;
-  font-size: 90px;
-  letter-spacing: 10px;
+  font-size: 5.6rem;
+  letter-spacing: 1rem;
   color: #fff;
-  padding: 30px;
+  padding: 3rem;
 }
 
 .gameleon{
@@ -39,7 +41,6 @@ body {
   right: 0;
   background-color: rgba(63, 14, 104, 0.9);
   position: fixed;
-  /* top: -8rem; */
   padding: 2rem;
   z-index: 10;
   animation: animateNavbar 1s 0.5s forwards;
@@ -75,12 +76,12 @@ body {
 }
 
 #logo{
-  height: 60px;
-  width: 140px;
+  height: 3.8rem;
+  width: 8.7rem;
   position: absolute;
   align-items: center;
-  top: 2px;
-  left: -3px;
+  top: 0.12rem;
+  left: -0.18rem;
 }
 
 .menu {
@@ -163,8 +164,8 @@ body {
  .swiper-container
  {
     width: 150vw;
-    padding-top: 50px;
-    padding-bottom: 200px;
+    padding-top: 3.12rem;
+    padding-bottom: 12.5rem;
     overflow: hidden;
 
   }
@@ -172,8 +173,8 @@ body {
 
 .img-fluid{
     position: center;
-    height: 230px;
-    width: 350px;
+    height: 14.37rem;
+    width: 21.88rem;
 
 }
 
@@ -181,8 +182,8 @@ body {
   {
     background-position: center;
     background-size: cover;
-    width: 350px;
-    height: 230px;
+    width: 21.87rem;
+    height: 14.37rem;
     background: #000;
     -webkit-box-reflect: below 1px linear-gradient(transparent,transparent,#0006);
   }
@@ -202,8 +203,8 @@ body {
   padding: 3rem 0;
   align-items: flex-start; 
   opacity: 0.9;  
-}  
-
+  overflow-x: hidden;
+}   
  .text {
 text-transform: uppercase;
 }
@@ -286,27 +287,78 @@ text-transform: uppercase;
 /* Responsive webpage Section*/
 
 
-@media (max-width: 550px){
+@media (max-width: 1208px){
   html{
-    zoom: .8;
+    zoom: .9;
   }
 }
 
-
-@media (max-width: 440px){
-  html{
-    zoom: .7
-  }
+@media (max-width: 1096px){
   .title{
-    font-size: 88px;
+    font-size: 5rem;
   }
- 
- 
+  .signup-form-input{
+    left: 50rem;
+  }
+  .signup-form-btn{
+    left: 67rem;
+  }
+  .paragraph{
+    font-size: 1rem;
+  }
+  .heading{
+    font-size: 1.2rem;
+  }
+}
+  
+@media (max-width: 1014px){
+html{
+  font-size: 95%;
+}
+.icons{
+  left: 6rem;
+}
+.icon-link{
+  margin: 0 2rem;
+}
+}
 
+@media (max-width: 980px){
+  html{
+    zoom: .8;
+  }
+
+}
+
+@media (max-width: 900px){
+  .footer{
+    height: 28vh;
+  }
+  .signup-form-input{
+      top: .6rem;
+      left: 28rem;
+      width: 25rem;
+  }
+  .signup-form-btn{
+    left: 52rem;
+  }
+}
+@media (max-width: 550px){
+  html{
+    font-size: 60%;
+  }
+  .signup-form-input{
+    left: 30rem;
+  }
+  .signup-form-btn{
+    left: 60rem;
+  }
+
+ 
 
 @media (max-width: 378px){
-  .title{
-    font-size: 80px;
+  .html{
+    font-size: 30%;
   }
 }
 
@@ -335,6 +387,7 @@ text-transform: uppercase;
   .title{
     display: none;
   }
+}
 }
 
 /* End of Responsive webpage section*/
@@ -377,4 +430,3 @@ text-transform: uppercase;
 }
   /* End of responsive Nav section */
 
-}
